--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -14,7 +14,7 @@ jobs:
 
     steps:
       - name: Curl to websites
-        ruu: |
+        run: |
         curl https://github-readme-activity-graph.vercel.app/graph?username=namanraina16&custom_title=Naman%20Raina's%20GitHub%20Activity%20Graph&bg_color=0D1117&color=7F3FBF&line=7F3FBF&point=7F3FBF&area_color=FFFFFF&title_color=FFFFFF&area=true
         curl https://denvercoder1-github-readme-stats.vercel.app/api?username=namanraina16&show_icons=true&count_private=true&theme=react&border_color=7F3FBF&bg_color=0D1117&title_color=F85D7F&icon_color=F8D866
         curl https://denvercoder1-github-readme-stats.vercel.app/api/top-langs/?username=namanraina16&langs_count=8&layout=compact&theme=react&border_color=7F3FBF&bg_color=0D1117&title_color=F85D7F&icon_color=F8D866
